<resources>
    <string name="app_name">PentapusDMH</string>
    <string name="action_settings">Settings</string>
    <string name="sDone">Save</string>
    <string name="sName">Name</string>
    <string name="sDetails">Details</string>
    <string name="campaign_settings">Manage Campaigns</string>
    <string name="play">Play</string>
    <string name="next">Next</string>
    <string name="initiative">Initiative</string>
    <string name="sessionsFragmentTitle">Sessions</string>
    <string name="campaignsFragmentTitle">Campaigns</string>
    <string name="encounterFragmentTitle">Encounters</string>
    <string name="maxHp">Max Hp</string>
    <string name="ac">AC</string>
    <string name="number_picker_result_value">Number: %1$s\nDecimal: %2$s\nIs negative: %3$b\nFull number: %4$s</string>
    <string name="roll">Roll</string>

    <string name="number_picker_seperator">Temp. HP</string>

    <string name="picker_cancel">Cancel</string>
    <string name="picker_set">OK</string>


    <string name="opendrawer">Open navigation drawer</string>
    <string name="closedrawer">Close navigation drawer</string>
    <string name="prefs_key_app_initiative_autoroll" translatable="false">pref_key_initiative_autoroll</string>

    <string name="number_picker_minus_label">—</string>
    <string name="number_delete">Delete</string>

    <string-array name="size">
        <item>Tiny</item>
        <item>Small</item>
        <item>Medium</item>
        <item>Large</item>
        <item>Huge</item>
        <item>Gargantuan</item>
    </string-array>

    <string-array name="dice">
        <item>d4</item>
        <item>d6</item>
        <item>d8</item>
        <item>d10</item>
        <item>d12</item>
        <item>d20</item>
    </string-array>

    <string-array name="spellcasting_ability">
        <item>Intelligence</item>
        <item>Wisdom</item>
        <item>Charisma</item>
    </string-array>

    <string-array name="spellcaster_level">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
    </string-array>

    <string-array name="spellcasting_class">
        <item>All</item>
        <item>Bard</item>
        <item>Cleric</item>
        <item>Druid</item>
        <item>Ranger</item>
        <item>Sorcerer</item>
        <item>Warlock</item>
        <item>Wizard</item>
    </string-array>



    <string-array name="damagetypes_array">
        <item>Bludgeoning</item>
        <item>Piercing</item>
        <item>Slashing</item>
        <item>Acid</item>
        <item>Cold</item>
        <item>Fire</item>
        <item>Force</item>
        <item>Lightning</item>
        <item>Necrotic</item>
        <item>Poison</item>
        <item>Psychic</item>
        <item>Radiant</item>
        <item>Thunder</item>
    </string-array>

</resources>
