<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.pentapus.pentapusdmh.Fragments.SessionEditFragment">

    <!-- TODO: Update blank fragment layout -->
    <EditText
        android:layout_width="375dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:selectAllOnFocus="true"
        android:hint="@string/sName"
        android:id="@+id/etName" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etName"
        android:hint="@string/sDetails"
        android:selectAllOnFocus="true"
        android:id="@+id/etInfo" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etInfo"
        android:hint="@string/initiative"
        android:selectAllOnFocus="true"
        android:inputType="numberSigned"
        android:id="@+id/etInit" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etInit"
        android:hint="@string/maxHp"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:id="@+id/etHpMax" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etHpMax"
        android:hint="@string/ac"
        android:selectAllOnFocus="true"
        android:inputType="number"
        android:id="@+id/etAc" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sDone"
        android:id="@+id/bDone"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
